--- a/algo/scheduling_conflicts/Cargo.toml
+++ b/algo/scheduling_conflicts/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ahash = "0.8"
+once_cell = "1.19"
 serde = { version = "1.0", features = ["serde_derive"] }
 thiserror = "1.0"
