--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-p type-check build-only",
     "build:all": "run-p build build:tauri",
     "build:tauri": "run-p build:python build:rust",
-    "build:python": "cd algo/F2,rj,pmtn,Cmax && pyinstaller --onefile --clean pa.py",
+    "build:python": "cd algo/F2,rj,pmtn,Cmax && pyinstaller --onefile pa.py",
     "build:rust": "cd algo/scheduling_conflicts && cargo build -r",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.5",
     "vue": "^3.4.7",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
