--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev:tauri": "npm run build:tauri && npm run dev",
     "build": "run-p type-check build-only",
     "build:all": "run-p build build:tauri",
-    "build:tauri": "run-p build:python build:rust",
+    "build:tauri": "run-p build:python",
     "build:python": "cd algo/F2,rj,pmtn,Cmax && pyinstaller --onefile pa.py",
-    "build:rust": "cd algo/scheduling_conflicts && cargo build -r",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
