--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev:tauri": "npm run build:tauri && npm run dev",
     "build": "run-p type-check build-only",
     "build:all": "run-p build build:tauri",
-    "build:tauri": "npm run build:python",
-    "build:python": "cd algo/F2,rj,pmtn,Cmax && pyinstaller --onefile --clean pa.py",
+    "build:tauri": "run-p build:python",
+    "build:python": "cd algo/F2,rj,pmtn,Cmax && pyinstaller --onefile pa.py",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.5",
     "vue": "^3.4.7",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
