--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,10 +15,13 @@ rust-version = "1.60"
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
+parking_lot = "0.12"
+pyo3 = { version = "0.20", features = ["auto-initialize"] }
 scheduling_conflicts = { version = "0.1.0", path = "../algo/scheduling_conflicts" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.4", features = ["process-command-api"] }
+thiserror = "1.0"
 
 [features]
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
