--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,11 +23,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
-    - name: npm ci
-      run: npm ci
-    - name: npm run build
-      run: npm run build
-    - name: cargo install tauri-cli
-      run: cargo install tauri-cli
-    - name: cargo tauri build
-      run: cargo tauri build
+    - run: rustup toolchain install stable --profile minimal
+    - uses: Swatinem/rust-cache@v2
+    - run: npm ci
+    - run: npm run build
+    - run: cargo install tauri-cli
+    - run: cargo tauri build
+    - run: cargo tauri build --target aarch64-pc-windows-msvc
