--- a/algo/scheduling_conflicts/Cargo.toml
+++ b/algo/scheduling_conflicts/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 ahash = "0.8"
 once_cell = "1.19"
+rand = "0.8"
 serde = { version = "1.0", features = ["serde_derive"] }
 thiserror = "1.0"
