--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ pyo3 = { version = "0.20", features = ["auto-initialize"] }
 scheduling_conflicts = { version = "0.1", path = "../algo/scheduling_conflicts" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6", features = ["process-command-api"] }
+tauri = { version = "1.6", features = [ "updater", "process-command-api"] }
 thiserror = "1.0"
 
 [features]
