--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,14 +74,13 @@ jobs:
         run: python3 script/build.py release ${{ github.event.release.tag_name }} aarch64-apple-darwin
 
       - name: Upload artifacts
-        if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform }}
           path: src-tauri/target/release/bundle
 
       - name: Upload artifacts (macos arm)
-        if: ${{ github.event_name == 'push' && matrix.platform == 'macos-latest' }}
+        if: ${{ matrix.platform == 'macos-latest' }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform }}-arm64
@@ -90,7 +89,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
