--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.8.4",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.5",
     "vue": "^3.4.7",
-    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
