--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ parking_lot = "0.12"
 scheduling_conflicts = { version = "0.1", path = "../algo/scheduling_conflicts" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6", features = ["updater", "process-command-api"] }
+tauri = { version = "1.6", features = [ "updater", "process-command-api", "dialog"] }
 thiserror = "1.0"
 
 [features]
